--- a/react-typescript-heroes/src/index.css
+++ b/react-typescript-heroes/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,35 +11,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.px1 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.mt2 {
-  margin-top: 2rem;
-}
-
-.todo {
-  margin-bottom: 1rem;
-}
-
-.todo.completed span {
-  text-decoration: line-through;
-}
-
-.todo label {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  cursor: pointer;
-  padding: 1rem;
-  background: #f3f3f3;
-}
-
-.todo i {
-  z-index: 2;
 }
